--- a/app/html/index.html
+++ b/app/html/index.html
@@ -5,11 +5,10 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<title>Brogue</title>
 		<meta name="description" content="A browser-based roguelike.">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, minimum-scale=1.0">
 		<link rel="stylesheet" href="app.css">
 	</head>
 	<body>
-		<div id="game"></div>
 		<script src="vendor.js"></script>
 		<script src="brogue.js"></script>
 	</body>
